tests/testdata/nonmem/errors/run_interrupted.ext
TABLE NO.     1: First Order Conditional Estimation with Interaction: Goal Function=MINIMUM VALUE OF OBJECTIVE FUNCTION: Problem=1 Subproblem=0 Superproblem1=0 Iteration1=0 Superproblem2=0 Iteration2=0
 ITERATION    THETA1       THETA2       THETA3       SIGMA(1,1)   OMEGA(1,1)   OMEGA(2,1)   OMEGA(2,2)   OBJ
            0  4.69307E-03  1.00916E+00  1.00000E-01  1.30865E-02  3.09626E-02  0.00000E+00  3.11280E-02    587.36644134661617
            1  4.68001E-03  9.89589E-01  1.05997E-01  1.30870E-02  3.09505E-02  0.00000E+00  3.09947E-02    586.90974697980869
            2  4.69974E-03  1.00074E+00  1.33654E-01  1.30500E-02  3.08885E-02  0.00000E+00  3.05448E-02    586.74488571270001
            3  4.70120E-03  9.83964E-01  1.83475E-01  1.30071E-02  3.07467E-02  0.00000E+00  2.95499E-02    586.45768082436416
